<?xml version="1.0"?>
<package format="2">

  <name>qp_speed_replanner</name>
  <version>0.0.0</version>
  <description>The qp_speed_replanner package</description>

  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>autoware_build_flags</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>python-numpy</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>autoware_build_flags</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <export>
  </export>

</package>
